tests/codegen/invalid/assembly_errors/test_wrong_arg_count.src
// Тест: неправильное количество аргументов
fn add(int a, int b) -> int {
    return a + b;
}

fn main() -> int {
    return add(5);  // не хватает второго аргумента
}